<resources>

    <string name="app_name">DeLiWei Food Factory</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_browse">DeLiWei Food Factory</string>
    <string name="title_activity_detailview">DeLiWei Food Factory</string>
    <string name="title_activity_login">DeLiWei Food Factory</string>
    <string name="title_activity_signup">DeLiWei Food Factory</string>
    <string name="title_activity_orderview">DeLiWei Food Factory</string>
    <string name="title_activity_uploadfooditem">DeLiWei Food Factory</string>
    <string name="order_list">Order List</string>
    <string name="order_button">Order Food</string>
    <string name="title_browse">Listing Food Items</string>

    <!-- order function -->
    <string name="order_action_button">Transaction</string>
    <string name="order_action_trace">Trace Your Order</string>
    <string name="order_action_confirm">Confirm</string>
    <string name="order_action_transaction">Transaction</string>

    <!-- Update item related string -->
    <string name="itemID">Food Item ID:</string>
    <string name="item_name">Food Item Name:</string>
    <string name="item_price">Food Item Price:</string>
    <string name="item_upload">Upload</string>
    <string name="item_no_image">No image taken</string>
    <string name="button_upload">Upload</string>
    <string name="item_action_order">Order it Now</string>
    <string name="upload_hint">enter</string>
    
    <string name="title_activity_nfc">DeLiWei Food Factory</string>
    <string name="nfc_greetings">Communicating&#8230;</string>
    <string name="gps_greetings">Welcome GPS</string>
    <string name="title_activity_cam">DeLiWei Food Factory</string>
    <string name="title_activity_gps">DeLiWei Food Factory</string>
    <string name="cam_greetings">Welcome Camera</string>
    <string name="user_name">Username:</string>
    <string name="hint_info">Please enter here</string>
    <string name="hint_info2">Please chose here</string>
    <string name="user_password">Password:</string>
    <string name="user_password_confirm">Confirm Password:</string>
    <string name="user_login">Login</string>
    <string name="user_signup">Signup</string>
    <string name="user_identity">Your Identity</string>
    <string name="take_photo">Take a Photo</string>
    <string name="cam_view">View</string>
    <string name="cam_shoot">Shoot</string>
    <string name="cam_switch">Switch</string>
    
    <string name="button_logout">Logout</string>
    <string name="food_detail">Food Detail</string>
    <string name="back">Back</string>

    <string-array name="identity">
        <item>Provider</item>
        <item>Courier</item>
        <item>Customer</item>
    </string-array>

</resources>