<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="140px"
            android:layout_height="wrap_content"
            android:text="@string/itemID"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editItemID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/itemID" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="140px"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editItemID"
            android:ems="10"
            android:hint="@string/item_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="140px"
            android:layout_height="wrap_content"
            android:text="@string/item_price"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editItemPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editItemName"
            android:ems="10"
            android:hint="@string/item_price" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editItemPrice"
            android:text="@string/item_upload"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_take_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonUpdate"
            android:text="@string/take_photo"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>