<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/trace"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView_order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_order_status"
        android:layout_alignParentTop="true"
        android:layout_marginTop="123dp"
        android:text="@string/hello_world"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_order_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="172dp"
        android:text="@string/hello_world"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_action"
        style="@style/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_trace"
        android:layout_alignRight="@+id/button_trace"
        android:layout_below="@+id/textView_order_status"
        android:background="@drawable/button_shape"
        android:text="@string/order_action_button"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_trace"
        style="@style/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_action"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_shape"
        android:text="@string/order_action_trace"
        android:textSize="18sp" />

</RelativeLayout>