<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0C0C0"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/titlelogo"
        android:layout_width="66sp"
        android:layout_height="66sp"
        android:layout_alignBottom="@+id/title_browse"
        android:layout_alignTop="@+id/title_browse"
        android:contentDescription="@string/hello_world"
        android:src="@drawable/titlelogo" />

    <TextView
        android:id="@+id/title_browse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/titlelogo"
        android:text="@string/title_browse"
        android:textColor="#800000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <ListView
        android:id="@+id/itemlist"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/title_browse"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="11dp"
        android:divider="@drawable/line_color"
        android:dividerHeight="1px"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/buttonUpload"
        style="@style/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemlist"
        android:layout_centerHorizontal="true"
         android:typeface="serif" 
        android:background="@drawable/button_shape"
        android:text="@string/button_upload"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/titlelogo2"
        android:layout_width="66sp"
        android:layout_height="66sp"
        android:layout_alignBottom="@+id/textStatic1"
        android:layout_alignTop="@+id/textStatic1"
        android:contentDescription="@string/hello_world"
        android:src="@drawable/titlelogo2" />

    <TextView
        android:id="@+id/textStatic1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonUpload"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/titlelogo2"
        android:text="@string/order_list"
        android:textColor="#800000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif" >
    </TextView>

    <ListView
        android:id="@+id/orderlist"
        android:layout_width="match_parent"
        android:layout_height="142dp"
        android:layout_below="@+id/textStatic1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="11dp"
        android:divider="@drawable/line_color"
        android:dividerHeight="1px"
        android:text="@string/hello_world" >
    </ListView>

</RelativeLayout>